# python_examples

./: app_params.py  bit_operation.ipynb  bit_operation.py  circle_linked_list.py  convert_words.py  custom_context_manager.py  doc_test_example.py  double_linked_list.py  dunder_methods.py  kmp_text_search.py  new__imutable.py  new__singletone.py  reverse_linked_list.py  singletone.py
2021-protocol-vs-abc-main/protocol/iot/: diagnostics.py
Jupyters/: bit_operation.ipynb
MakeImage/: make_image.py
asyncio_tutor/: main.py
binary_tree_rotation/: binary_tree.py  live.py  rotate_binary_tree.py  sort_binary_tree.py
decorators/: example_1.py
generators/: generator_example.py
multithreading/GIL/: gil_example.py
multithreading/process/: child_process.py  event_menager.py  os_pid.py  pipe_example.py  pipe_example_2.py  proccess_conflict.py  proccess_example.py  proccess_race_lock.py  proccess_rlock.py  proccess_unlock.py  process_pool.py  process_pool_2.py  process_pool_3.py  queue_1.py  sync_proccess.py
multithreading/threads/: barrier_example.py  bounded_semaphore.py  daemon_example.py  local_data_example.py  lock_rlock.py  simple_thread.py  thread_1.py  thread_cancel.py  timer_deamon.py
protocol_example/: run.py
protocol_example/app/: protocol_test.py  protocol_test_2.py
protocol_example/app/models/: custom_uno.py  dos.py  uno.py
protocol_example/app/protocols/: protocol_custom_uno.py  protocol_dos.py  protocol_uno.py
simple_flask/: pyproject.toml
simple_flask/app/: __init__.py  migrate.py  models.py  routes.py
