[tool.poetry]
name = "simple-flask"
version = "0.1.0"
description = ""
authors = ["Andrey Torlopov <torlopov.mail@ya.ru>"]
readme = "README.md"
packages = [{include = "simple_flask"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
flask-sqlalchemy = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
